--- a/Data Handling Tutorial.ipynb
+++ b/Data Handling Tutorial.ipynb
@@ -410,11 +410,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SLURM_JOBID=21345415\r\n",
+      "SLURM_JOB_USER=wfedorko\r\n",
+      "SLURM_JOB_QOS=normal\r\n",
+      "SLURM_JOB_NUM_NODES=1\r\n",
+      "SLURM_TASKS_PER_NODE=1\r\n",
+      "SLURM_TOPOLOGY_ADDR_PATTERN=switch.switch.switch.node\r\n",
+      "SLURM_WORKING_CLUSTER=cedar:172.16.128.61:6817:8192\r\n",
+      "SLURM_JOB_NAME=notebook\r\n",
+      "SLURM_JOB_CPUS_PER_NODE=4\r\n",
+      "SLURM_JOB_GID=3018561\r\n",
+      "SLURM_CPUS_ON_NODE=4\r\n",
+      "SLURM_PROCID=0\r\n",
+      "SLURM_JOB_ACCOUNT=def-tafirout_cpu\r\n",
+      "SLURM_RESTART_COUNT=0\r\n",
+      "SLURM_SUBMIT_HOST=cedar5.cedar.computecanada.ca\r\n",
+      "SLURM_NODELIST=cdr693\r\n",
+      "SLURM_NNODES=1\r\n",
+      "SLURM_JOB_ID=21345415\r\n",
+      "SLURMD_NODENAME=cdr693\r\n",
+      "SLURM_JOB_NODELIST=cdr693\r\n",
+      "SLURM_GTIDS=0\r\n",
+      "SLURM_CPUS_PER_TASK=4\r\n",
+      "SLURM_CHECKPOINT_IMAGE_DIR=/var/slurm/checkpoint\r\n",
+      "SLURM_JOB_UID=3018561\r\n",
+      "SLURM_CLUSTER_NAME=cedar\r\n",
+      "SLURM_TMPDIR=/localscratch/wfedorko.21345415.0\r\n",
+      "SLURM_LOCALID=0\r\n",
+      "SLURM_JOB_PARTITION=cpubase_bycore_b2\r\n",
+      "SLURM_TASK_PID=167701\r\n",
+      "SLURM_TOPOLOGY_ADDR=core.leaf-g1-11.g1-8-2.cdr693\r\n",
+      "SLURM_MEM_PER_NODE=16000\r\n",
+      "SLURM_NODE_ALIASES=(null)\r\n",
+      "SLURM_NODEID=0\r\n",
+      "SLURM_SUBMIT_DIR=/project/6001183/wfedorko/TRIUMF_DS_NUPRISM/NUPRISM-CNN\r\n"
+     ]
+    }
+   ],
    "source": [
     "!printenv | grep SLURM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets actually create DataLoader objects - one for each training, validation and testing set - but each DataLoader uses the same dataset -that way we keep only one open file (this is the 'standard' pytorch way)"
    ]
   },
   {
@@ -422,7 +470,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.utils.data import DataLoader                                                                                                    from torch.utils.data.sampler import SubsetRandomSampler\n",
+    "self.train_iter=DataLoader(dset,batch_size=64,shuffle=False,sampler=SubsetRandomSampler(dset.train_indices))"
+   ]
   }
  ],
  "metadata": {
