--- a/Data Handling Tutorial.ipynb
+++ b/Data Handling Tutorial.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "Here is an event display where the barrel was 'unrolled':\n",
-    "![NUPR](img/NUPRISM_diag.png) - you can clearly see a Cherenkov ring appearing\n",
+    "![eventdisp](img/ev_disp.png) - you can clearly see a Cherenkov ring appearing\n",
     "The 'brightness' corresponds to charge collected by each PMT. Each PMT also tells us the arrival time of the signal."
    ]
   },
