more explanation on ssh keys

--- a/Data Handling Tutorial.ipynb
+++ b/Data Handling Tutorial.ipynb
@@ -57,6 +57,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. If you don't have a github account [MAKE ONE NOW](https://github.com/join)\n",
+    "1. If you don't have a ssh keys from cedar linked to the github account make them now:\n",
+    "   1. If you have no ~/.ssh directory or there is no id_rsa.pub file in that directory type: `ssh -t rsa -b 4096` - and press `Enter` for all prompts\n",
+    "   1. do `cat ~/.ssh/id_rsa.pub` and copy the output to clipboard\n",
+    "   1. on github website click on your avatar in upper right corner, chooose 'Settings'\n",
+    "   1. From menu on the left click on 'SSH and GPG keys'\n",
+    "   1. Click on 'New SSH key' on top right\n",
+    "   1. Paste entire clipboard into the 'Key' field; Name it something snsible e.g. 'cedar'\n",
+    "   \n",
     "1. First log in to cedar and go to a directory where you can submit jobs from e.g. your /project space then clone the repository where this code lives:  \n",
     "`git clone git@github.com:triumf-data-science-study-group/NUPRISM-CNN.git`\n",
     "1. cd inside. There are a few scripts in the repository: `jupyter_job.sh`, `enter_container.sh` and `start_jupyternotebook.sh` 1. these in order are:\n",
@@ -68,6 +77,7 @@
     "1. Go ahead and examine the scripts...\n",
     "1. Ok let's submit a job that will launch a jupyter server for you:  \n",
     "`sbatch ./jupyter_job.sh`\n",
+    "NOTE: if you have multiple roles/projects you will need to specifiy the 'account' under which to submit the job. Generally don't use a project allocation account - that would deplete the allocation. Instead use the 'default' account - this will usually be `def-your-PI-last-name` for example: `sbatch --account=def-doe ./jupyter_job.sh`\n",
     "1. Hopefully fairly quickly you will get a job running - to sheck if the job is running type:  \n",
     "`squeue -u ${USER}`\n",
     "1. You should see something resempling this:  \n",
@@ -96,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw---- 1 wfedorko wfedorko 82G May 22 17:15 /scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5\r\n"
+      "-rw-rw-r-- 1 wfedorko wfedorko 82G May 22 17:15 /scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5\r\n"
      ]
     }
    ],
