tweaks to the text

--- a/Simple MLP and CNN tutorial.ipynb
+++ b/Simple MLP and CNN tutorial.ipynb
@@ -31,12 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cdr906.int.cedar.computecanada.ca\n",
+      "'/scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5' -> '/localscratch/wfedorko.22868755.0/merged_IWCDmPMT_varyE.h5'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hostname\n",
+    "!cp /scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5 ${SLURM_TMPDIR}/ -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from io_utils.data_handling import WCH5Dataset\n",
-    "dset=WCH5Dataset(\"/fast_scratch/WatChMaL/data/IWCDmPMT/varyE/IWCDmPMT_varyE_100-1000MeV_300k_fmt.h5\",val_split=0.1,test_split=0.1)"
+    "dset=WCH5Dataset(os.environ['SLURM_TMPDIR']+\"/merged_IWCDmPMT_varyE.h5\",val_split=0.1,test_split=0.1)"
    ]
   },
   {
@@ -48,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,13 +101,13 @@
     "  - model parameters\n",
     "  - inputs and the forward method\n",
     "  - Modules containing modules\n",
-    "  - Sequential Module\n",
+    "  - Sequential Module<br>\n",
     "  Lets open [simpleMLP](../edit/models/simpleMLP.py)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +173,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again we can take a look at the parameters - now `Sequential` is a parameter with parameters of it's own"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,27 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "transform=np.ravel\n",
-    "dset=WCH5Dataset(\"/fast_scratch/WatChMaL/data/IWCDmPMT/varyE/IWCDmPMT_varyE_100-1000MeV_300k_fmt.h5\",val_split=0.1,test_split=0.1,transform=transform)"
+    "dset=WCH5Dataset(os.environ['SLURM_TMPDIR']+\"/merged_IWCDmPMT_varyE.h5\",val_split=0.1,test_split=0.1,transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look at the \n",
+    "[training engine](../edit/training_utils/engine.py)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from training_utils.engine import Engine"
+    "from training_utils.engine import Engine\n",
+    "!mkdir model_state_dumps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +249,7 @@
       "Requesting GPUs. GPU list : [0]\n",
       "Main GPU: cuda:0\n",
       "CUDA is available\n",
-      "Creating a directory for run dump: model_state_dumps/20190619_194628/\n"
+      "Creating a directory for run dump: model_state_dumps/20190619_211845/\n"
      ]
     }
    ],
@@ -223,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -240,58 +276,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 Starting @ 2019-06-19 19:42:43\n",
-      "... Iteration 1 ... Epoch 0.00 ... Loss 2.577 ... Accuracy 0.344\n",
-      "... Iteration 10 ... Epoch 0.00 ... Loss 1.821 ... Accuracy 0.250\n",
-      "... Iteration 20 ... Epoch 0.00 ... Loss 1.130 ... Accuracy 0.250\n",
-      "... Iteration 30 ... Epoch 0.00 ... Loss 0.998 ... Accuracy 0.531\n",
-      "... Iteration 40 ... Epoch 0.00 ... Loss 0.946 ... Accuracy 0.469\n",
-      "... Iteration 50 ... Epoch 0.00 ... Loss 1.049 ... Accuracy 0.344\n",
-      "... Iteration 60 ... Epoch 0.00 ... Loss 0.917 ... Accuracy 0.656\n",
-      "... Iteration 70 ... Epoch 0.00 ... Loss 0.934 ... Accuracy 0.469\n",
-      "... Iteration 80 ... Epoch 0.00 ... Loss 0.974 ... Accuracy 0.531\n",
-      "... Iteration 90 ... Epoch 0.00 ... Loss 0.867 ... Accuracy 0.625\n",
-      "... Iteration 100 ... Epoch 0.00 ... Loss 0.836 ... Accuracy 0.500\n",
-      "Saved checkpoint as: model_state_dumps/20190619_194243/SimpleMLP.pth\n",
-      "best validation loss so far!: 0.8397846817970276\n",
-      "Saved checkpoint as: model_state_dumps/20190619_194243/SimpleMLPBEST.pth\n",
-      "... Iteration 110 ... Epoch 0.00 ... Loss 0.867 ... Accuracy 0.562\n",
-      "... Iteration 120 ... Epoch 0.01 ... Loss 0.838 ... Accuracy 0.562\n",
-      "... Iteration 130 ... Epoch 0.01 ... Loss 0.799 ... Accuracy 0.531\n",
-      "... Iteration 140 ... Epoch 0.01 ... Loss 0.637 ... Accuracy 0.719\n",
-      "... Iteration 150 ... Epoch 0.01 ... Loss 0.623 ... Accuracy 0.750\n",
-      "... Iteration 160 ... Epoch 0.01 ... Loss 0.657 ... Accuracy 0.719\n",
-      "... Iteration 170 ... Epoch 0.01 ... Loss 0.574 ... Accuracy 0.688\n",
-      "... Iteration 180 ... Epoch 0.01 ... Loss 0.880 ... Accuracy 0.500\n",
-      "... Iteration 190 ... Epoch 0.01 ... Loss 0.696 ... Accuracy 0.625\n",
-      "... Iteration 200 ... Epoch 0.01 ... Loss 0.606 ... Accuracy 0.688\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-bb02f5c925c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreport_interval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalid_interval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/NUPRISM-CNN/training_utils/engine.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, epochs, report_interval, valid_interval)\u001b[0m\n\u001b[1;32m    211\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    214\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'loss'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mbest_val_loss\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m                         \u001b[0mbest_val_loss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'loss'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/NUPRISM-CNN/training_utils/engine.py\u001b[0m in \u001b[0;36msave_state\u001b[0;34m(self, best)\u001b[0m\n\u001b[1;32m    317\u001b[0m             \u001b[0;34m'optimizer'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m             \u001b[0;34m'state_dict'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 319\u001b[0;31m         }, filename)\n\u001b[0m\u001b[1;32m    320\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Saved checkpoint as:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    321\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(obj, f, pickle_module, pickle_protocol)\u001b[0m\n\u001b[1;32m    222\u001b[0m         \u001b[0;34m>>\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m     \"\"\"\n\u001b[0;32m--> 224\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_with_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_protocol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_with_file_like\u001b[0;34m(f, mode, body)\u001b[0m\n\u001b[1;32m    145\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0mnew_fd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mbody\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 0 Starting @ 2019-06-19 21:19:08\n",
+      "... Iteration 1 ... Epoch 0.00 ... Loss 3.244 ... Accuracy 0.219\n",
+      "... Iteration 10 ... Epoch 0.00 ... Loss 1.628 ... Accuracy 0.344\n",
+      "... Iteration 20 ... Epoch 0.00 ... Loss 0.980 ... Accuracy 0.562\n",
+      "... Iteration 30 ... Epoch 0.00 ... Loss 1.098 ... Accuracy 0.469\n",
+      "... Iteration 40 ... Epoch 0.00 ... Loss 1.080 ... Accuracy 0.344\n",
+      "... Iteration 50 ... Epoch 0.00 ... Loss 1.092 ... Accuracy 0.375\n",
+      "... Iteration 60 ... Epoch 0.00 ... Loss 0.973 ... Accuracy 0.500\n",
+      "... Iteration 70 ... Epoch 0.00 ... Loss 1.252 ... Accuracy 0.406\n",
+      "... Iteration 80 ... Epoch 0.00 ... Loss 0.810 ... Accuracy 0.688\n",
+      "... Iteration 90 ... Epoch 0.00 ... Loss 1.100 ... Accuracy 0.406\n",
+      "... Iteration 100 ... Epoch 0.00 ... Loss 0.776 ... Accuracy 0.781\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLP.pth\n",
+      "best validation loss so far!: 0.8180537819862366\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLPBEST.pth\n",
+      "... Iteration 110 ... Epoch 0.00 ... Loss 0.860 ... Accuracy 0.594\n",
+      "... Iteration 120 ... Epoch 0.01 ... Loss 0.772 ... Accuracy 0.688\n",
+      "... Iteration 130 ... Epoch 0.01 ... Loss 0.845 ... Accuracy 0.531\n",
+      "... Iteration 140 ... Epoch 0.01 ... Loss 0.686 ... Accuracy 0.625\n",
+      "... Iteration 150 ... Epoch 0.01 ... Loss 0.735 ... Accuracy 0.625\n",
+      "... Iteration 160 ... Epoch 0.01 ... Loss 0.607 ... Accuracy 0.750\n",
+      "... Iteration 170 ... Epoch 0.01 ... Loss 0.610 ... Accuracy 0.656\n",
+      "... Iteration 180 ... Epoch 0.01 ... Loss 0.635 ... Accuracy 0.719\n",
+      "... Iteration 190 ... Epoch 0.01 ... Loss 0.812 ... Accuracy 0.625\n",
+      "... Iteration 200 ... Epoch 0.01 ... Loss 0.936 ... Accuracy 0.531\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLP.pth\n",
+      "best validation loss so far!: 0.7777681350708008\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLPBEST.pth\n",
+      "... Iteration 210 ... Epoch 0.01 ... Loss 0.621 ... Accuracy 0.719\n",
+      "... Iteration 220 ... Epoch 0.01 ... Loss 0.605 ... Accuracy 0.594\n",
+      "... Iteration 230 ... Epoch 0.01 ... Loss 0.590 ... Accuracy 0.688\n",
+      "... Iteration 240 ... Epoch 0.01 ... Loss 0.815 ... Accuracy 0.438\n",
+      "... Iteration 250 ... Epoch 0.01 ... Loss 0.582 ... Accuracy 0.719\n",
+      "... Iteration 260 ... Epoch 0.01 ... Loss 0.685 ... Accuracy 0.594\n",
+      "... Iteration 270 ... Epoch 0.01 ... Loss 0.589 ... Accuracy 0.594\n",
+      "... Iteration 280 ... Epoch 0.01 ... Loss 0.873 ... Accuracy 0.719\n",
+      "... Iteration 290 ... Epoch 0.01 ... Loss 0.534 ... Accuracy 0.781\n",
+      "... Iteration 300 ... Epoch 0.01 ... Loss 0.602 ... Accuracy 0.656\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLP.pth\n",
+      "best validation loss so far!: 0.5474033355712891\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLPBEST.pth\n",
+      "... Iteration 310 ... Epoch 0.01 ... Loss 0.515 ... Accuracy 0.812\n",
+      "... Iteration 320 ... Epoch 0.01 ... Loss 0.382 ... Accuracy 0.781\n",
+      "... Iteration 330 ... Epoch 0.01 ... Loss 0.559 ... Accuracy 0.625\n",
+      "... Iteration 340 ... Epoch 0.02 ... Loss 0.472 ... Accuracy 0.688\n",
+      "... Iteration 350 ... Epoch 0.02 ... Loss 0.651 ... Accuracy 0.656\n",
+      "... Iteration 360 ... Epoch 0.02 ... Loss 0.682 ... Accuracy 0.594\n",
+      "... Iteration 370 ... Epoch 0.02 ... Loss 0.559 ... Accuracy 0.719\n",
+      "... Iteration 380 ... Epoch 0.02 ... Loss 0.583 ... Accuracy 0.594\n",
+      "... Iteration 390 ... Epoch 0.02 ... Loss 0.760 ... Accuracy 0.438\n",
+      "... Iteration 400 ... Epoch 0.02 ... Loss 0.480 ... Accuracy 0.719\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLP.pth\n",
+      "best validation loss so far!: 0.52964848279953\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLPBEST.pth\n",
+      "... Iteration 410 ... Epoch 0.02 ... Loss 0.561 ... Accuracy 0.688\n",
+      "... Iteration 420 ... Epoch 0.02 ... Loss 0.564 ... Accuracy 0.656\n",
+      "... Iteration 430 ... Epoch 0.02 ... Loss 0.544 ... Accuracy 0.625\n",
+      "... Iteration 440 ... Epoch 0.02 ... Loss 0.480 ... Accuracy 0.688\n",
+      "... Iteration 450 ... Epoch 0.02 ... Loss 0.446 ... Accuracy 0.844\n",
+      "... Iteration 460 ... Epoch 0.02 ... Loss 0.609 ... Accuracy 0.562\n",
+      "... Iteration 470 ... Epoch 0.02 ... Loss 0.457 ... Accuracy 0.750\n",
+      "... Iteration 480 ... Epoch 0.02 ... Loss 0.545 ... Accuracy 0.625\n",
+      "... Iteration 490 ... Epoch 0.02 ... Loss 0.420 ... Accuracy 0.844\n",
+      "... Iteration 500 ... Epoch 0.02 ... Loss 0.570 ... Accuracy 0.719\n",
+      "Saved checkpoint as: model_state_dumps/20190619_211845/SimpleMLP.pth\n",
+      "best validation loss so far!: 0.46997329592704773\n"
      ]
     }
    ],
    "source": [
-    "engine.train(epochs=2.5,report_interval=10,valid_interval=100)"
+    "engine.train(epochs=5,report_interval=10,valid_interval=100)"
    ]
   },
   {
