tutorial section on training quality and performnce metrics

--- a/Simple MLP and CNN tutorial.ipynb
+++ b/Simple MLP and CNN tutorial.ipynb
@@ -31,6 +31,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cp: cannot stat '/scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5': No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cp /scratch/wfedorko/TRIUMF_DS_NUPRISM/merged_IWCDmPMT_varyE.h5 ${SLURM_TMPDIR}/ -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "triumf-ml1\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!hostname"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
